# learngit

./: 1804-2-忻超-基于强化学习的多机器人路径规划 - 副本.pptx  readme.txt  基于深度图的二维导航地图构建报预研报告.doc  多机器人导航预研报告.doc  工作进展.pptx
agv路径导航/code/agv_a3c/: A3C_discrete_action.py  agv_no_obtacles_random.py  cmd2pvt_random.py  test_A3C_discrete_action.py  train_no_obtacles_random.py
agv路径导航/code/agv_a3c/data/: diffmc_params_q1.txt
agv路径导航/code/agv_dqn/: env_final_512laser_numpy_vcontrol00020.py  replay_buffer.py  replay_buffer_magent.py  test_final_512laser_numpy_vcontrol00011.py  train_final_512laser_numpy_vcontrol00020.py
agv路径导航/code/agv_dqn/data/: out.png.20x20
agv路径导航/code/agv_dqn/libenv/: RVO.py  cmd2pvt.py  example.py  test2.py  test3.py  test_env.py
agv路径导航/code/agv_dqn/libenv/data/: out.png.40x40
agv路径导航/code/agv_dqn/libenv/rvo/: example.py
agv路径导航/report/: 忻超-基于强化学习的多机器人路径规划.pptx
code/code_navigate_a3c/HulkSmashThor_test_map/: constants.py  dagger_constants.py  draw.py  evaluate.py  evaluate_bathroom.py  evaluate_video.py  ffmepg_png_tomp4.txt~  keyboard_agent.py  refer.txt  result.txt  scene_loader.py  train.py  training_thread.py
code/code_navigate_a3c/HulkSmashThor_test_map/utils/: ops.py  tools.py
code/data_climb/: dfs_map_package_huishu_excel_multifloor_thread.py  stack.py
code/moro_code/: CMakeLists.txt
code/moro_code/demo/: main.cpp
code/moro_code/include/: MakeMap.h  MakeMap.h~  MakeMap1.h  MakeMap1.h~
code/moro_code/python/: bar_stacked.py  legend.py  multi_images_show.py  read_result.py  solve.py
code/moro_code/src/: MakeMake.cpp~  MakeMap (另一个复件).cpp  MakeMap (另一个复件).cpp~  MakeMap (复件).cpp  MakeMap (第3个复件).cpp  MakeMap.cpp  MakeMap1111.cpp  MakeMap_0111_hao.cpp  MakeMap_1112.cpp  MakeMap_2d.cpp~  MakeMap_2d_xuanzhuan.cpp  MakeMap_GlobalMap.cpp  MakeMap_Global_Map1.cpp  MakeMap_bp.cpp  MakeMap_hao (复件).cpp  MakeMap_hao.cpp  MakeMap_hao.cpp~  MakeMap_no.cpp  MakeMap_no.cpp~  MakeMap_nobingxing.cpp~  MakeMap_sim.cpp  MakeMap_xiaoguohao_ok.cpp  MakeMap_youhua.cpp~  main.cpp~
code/remove_reflection/CEILNet/: bmp_to_png.py~  evaluation_reflection.lua  evaluation_reflection.lua~  evaluation_smooth.lua~  generate_data_reflection.lua  generate_data_reflection.lua~
进阶二_室内找东西/: ~WRL0001.tmp
